--- a/PalCine/Base.lproj/Main.storyboard
+++ b/PalCine/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="zNB-dX-Tvy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="w6A-rd-KuU">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -23,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="Pp7-7Z-JBT">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <rect key="frame" x="0.0" y="44" width="320" height="524"/>
                             </imageView>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="ao1-Ha-Ezx">
                                 <rect key="frame" x="142" y="364" width="37" height="37"/>
@@ -48,16 +48,17 @@
                             <constraint firstItem="h5l-hb-sFd" firstAttribute="trailing" secondItem="XeU-8W-aIc" secondAttribute="trailingMargin" id="ydO-7n-7v0"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="Ooa-44-nYE"/>
                     <connections>
                         <outlet property="activityIndicatorView" destination="ao1-Ha-Ezx" id="33j-Sc-whn"/>
                         <outlet property="loadingImageView" destination="Pp7-7Z-JBT" id="qRP-tL-anH"/>
                         <outlet property="loadingStatusLabel" destination="h5l-hb-sFd" id="tIO-yD-lep"/>
-                        <segue destination="m2i-33-jez" kind="show" identifier="toHome" id="Kfs-A8-FHI"/>
+                        <segue destination="igh-JB-Goa" kind="show" identifier="toHome" id="z9O-3F-UNN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xYI-71-50x" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1746" y="-871"/>
+            <point key="canvasLocation" x="-519" y="-900"/>
         </scene>
         <!--MovieOS-->
         <scene sceneID="uOm-td-v4s">
@@ -89,42 +90,42 @@
                                                             <rect key="frame" x="0.0" y="26" width="320" height="246"/>
                                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="5" minimumInteritemSpacing="5" id="RMa-7n-1H7">
-                                                                <size key="itemSize" width="150" height="230"/>
+                                                                <size key="itemSize" width="124" height="230"/>
                                                                 <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                                 <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                                                 <inset key="sectionInset" minX="7" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                             </collectionViewFlowLayout>
                                                             <cells>
                                                                 <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="myCell" id="F7d-di-Jzc" customClass="MovieCollectionViewCell" customModule="PalCine" customModuleProvider="target">
-                                                                    <rect key="frame" x="7" y="8" width="150" height="230"/>
+                                                                    <rect key="frame" x="7" y="8" width="124" height="230"/>
                                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="150" height="230"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="124" height="230"/>
                                                                         <autoresizingMask key="autoresizingMask"/>
                                                                         <subviews>
                                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="f61-uT-f1l">
-                                                                                <rect key="frame" x="0.0" y="0.0" width="150" height="185"/>
+                                                                                <rect key="frame" x="0.0" y="0.0" width="124" height="186"/>
                                                                                 <constraints>
-                                                                                    <constraint firstAttribute="height" constant="185" id="ek4-m5-Rpa"/>
+                                                                                    <constraint firstAttribute="height" constant="186" id="ek4-m5-Rpa"/>
                                                                                 </constraints>
                                                                             </imageView>
                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eju-9G-flh">
-                                                                                <rect key="frame" x="0.0" y="185" width="150" height="25"/>
-                                                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="13"/>
+                                                                                <rect key="frame" x="0.0" y="185" width="124" height="25"/>
+                                                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
                                                                                 <color key="textColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                                 <nil key="highlightedColor"/>
                                                                             </label>
                                                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="rss-px-fXl">
-                                                                                <rect key="frame" x="0.0" y="210" width="100" height="20"/>
+                                                                                <rect key="frame" x="0.0" y="210" width="104" height="20"/>
                                                                                 <subviews>
                                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NiL-Ta-32I">
-                                                                                        <rect key="frame" x="0.0" y="3" width="50" height="14.5"/>
+                                                                                        <rect key="frame" x="0.0" y="3" width="52" height="14.5"/>
                                                                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                                                         <color key="textColor" red="0.4756349325" green="0.47564673419999998" blue="0.47564041610000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                                         <nil key="highlightedColor"/>
                                                                                     </label>
                                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="45t-Io-Jsw">
-                                                                                        <rect key="frame" x="50" y="1" width="50" height="18"/>
+                                                                                        <rect key="frame" x="52" y="1" width="52" height="18"/>
                                                                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                                                                         <color key="textColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                                                                         <nil key="highlightedColor"/>
@@ -138,18 +139,18 @@
                                                                     </view>
                                                                     <constraints>
                                                                         <constraint firstAttribute="bottom" secondItem="rss-px-fXl" secondAttribute="bottom" id="2cc-7P-3Sy"/>
-                                                                        <constraint firstAttribute="trailing" secondItem="rss-px-fXl" secondAttribute="trailing" constant="50" id="4mH-rv-tbP"/>
+                                                                        <constraint firstAttribute="trailing" secondItem="rss-px-fXl" secondAttribute="trailing" constant="20" id="4mH-rv-tbP"/>
                                                                         <constraint firstItem="f61-uT-f1l" firstAttribute="top" secondItem="F7d-di-Jzc" secondAttribute="top" id="Jmi-1x-eZN"/>
                                                                         <constraint firstItem="Eju-9G-flh" firstAttribute="leading" secondItem="F7d-di-Jzc" secondAttribute="leading" id="LJv-Nf-vU7"/>
                                                                         <constraint firstAttribute="trailing" secondItem="f61-uT-f1l" secondAttribute="trailing" id="SFS-O5-qJJ"/>
-                                                                        <constraint firstItem="Eju-9G-flh" firstAttribute="top" secondItem="f61-uT-f1l" secondAttribute="bottom" id="WGm-Zi-3PH"/>
+                                                                        <constraint firstItem="Eju-9G-flh" firstAttribute="top" secondItem="f61-uT-f1l" secondAttribute="bottom" constant="-1" id="WGm-Zi-3PH"/>
                                                                         <constraint firstAttribute="trailing" secondItem="Eju-9G-flh" secondAttribute="trailing" id="iHp-9W-1aK"/>
                                                                         <constraint firstItem="f61-uT-f1l" firstAttribute="centerX" secondItem="F7d-di-Jzc" secondAttribute="centerX" id="mbk-ze-3Xh"/>
                                                                         <constraint firstItem="rss-px-fXl" firstAttribute="leading" secondItem="F7d-di-Jzc" secondAttribute="leading" id="nmU-Xd-HI9"/>
                                                                         <constraint firstItem="rss-px-fXl" firstAttribute="top" secondItem="Eju-9G-flh" secondAttribute="bottom" id="o2q-Re-4oX"/>
                                                                         <constraint firstItem="f61-uT-f1l" firstAttribute="leading" secondItem="F7d-di-Jzc" secondAttribute="leading" id="vBk-0Y-moH"/>
                                                                     </constraints>
-                                                                    <size key="customSize" width="150" height="230"/>
+                                                                    <size key="customSize" width="124" height="230"/>
                                                                     <connections>
                                                                         <outlet property="posterImageView" destination="f61-uT-f1l" id="hlQ-hN-KK8"/>
                                                                         <outlet property="ratingDescLabel" destination="NiL-Ta-32I" id="vMw-0t-BhB"/>
@@ -220,7 +221,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0dU-rQ-t9P" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="88.125" y="-871.47887323943667"/>
+            <point key="canvasLocation" x="249" y="-900"/>
         </scene>
         <!--Pal Cine-->
         <scene sceneID="tne-QT-ifu">
@@ -744,22 +745,22 @@
             <point key="canvasLocation" x="758" y="1036"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="ZDh-NA-r79">
+        <scene sceneID="rzw-8V-W9a">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="m2i-33-jez" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="w6A-rd-KuU" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="kbv-BH-38U">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="HEO-C1-atK">
                         <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="igh-JB-Goa" kind="relationship" relationship="rootViewController" id="U6m-V0-DJT"/>
+                        <segue destination="zNB-dX-Tvy" kind="relationship" relationship="rootViewController" id="e6X-Tk-cU9"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="DX5-vl-UoW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AmT-aF-DZe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-711" y="-1030"/>
+            <point key="canvasLocation" x="-1299" y="-900"/>
         </scene>
     </scenes>
     <resources>
