--- a/PalCine/Base.lproj/Main.storyboard
+++ b/PalCine/Base.lproj/Main.storyboard
@@ -74,20 +74,20 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="I0m-Ij-U6p">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="868"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="featureMovieCell" rowHeight="150" id="XVQ-cs-aiy" customClass="FeatureMovieTableViewCell" customModule="PalCine" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="320" height="150"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="featureMovieCell" rowHeight="160" id="XVQ-cs-aiy" customClass="FeatureMovieTableViewCell" customModule="PalCine" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="160"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="XVQ-cs-aiy" id="Kab-pY-sZ5">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="149.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="159.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vr9-bP-La3" userLabel="container">
-                                                    <rect key="frame" x="0.0" y="0.0" width="320" height="130"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="E1M-Pz-XXa">
-                                                            <rect key="frame" x="0.0" y="0.0" width="200" height="130"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="200" height="150"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="200" id="stu-rI-Hco"/>
                                                             </constraints>
@@ -110,10 +110,10 @@
                                                             </subviews>
                                                         </stackView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Storyline" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pOP-aI-eqV">
-                                                            <rect key="frame" x="208" y="23" width="104" height="14.5"/>
+                                                            <rect key="frame" x="208" y="23" width="104" height="15"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="15" id="0rb-6Z-p7B"/>
-                                                                <constraint firstAttribute="height" relation="lessThanOrEqual" constant="107" id="b7A-Tw-g5U"/>
+                                                                <constraint firstAttribute="height" relation="lessThanOrEqual" constant="127" id="b7A-Tw-g5U"/>
                                                             </constraints>
                                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                             <color key="textColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -159,9 +159,10 @@
                                                 <constraint firstAttribute="trailing" secondItem="vr9-bP-La3" secondAttribute="trailing" id="EuI-5R-LCt"/>
                                                 <constraint firstItem="vr9-bP-La3" firstAttribute="top" secondItem="Kab-pY-sZ5" secondAttribute="top" id="LWS-ME-Vsi"/>
                                                 <constraint firstItem="vr9-bP-La3" firstAttribute="leading" secondItem="Kab-pY-sZ5" secondAttribute="leading" id="mpN-zw-nU9"/>
-                                                <constraint firstAttribute="bottom" secondItem="vr9-bP-La3" secondAttribute="bottom" constant="20" id="snW-eP-YCC"/>
+                                                <constraint firstAttribute="bottom" secondItem="vr9-bP-La3" secondAttribute="bottom" constant="10" id="snW-eP-YCC"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
                                             <outlet property="gradientView" destination="fDt-lK-uQb" id="GwZ-tN-m8Q"/>
                                             <outlet property="movieImageView" destination="E1M-Pz-XXa" id="bkS-mk-bFJ"/>
@@ -171,17 +172,17 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="movieCategoryCell" rowHeight="280" id="Wyr-qT-cgv" customClass="MovieCategoryTableViewCell" customModule="PalCine" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="178" width="320" height="280"/>
+                                        <rect key="frame" x="0.0" y="188" width="320" height="280"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Wyr-qT-cgv" id="isZ-UM-yVN">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="279.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cqH-5v-DKv" userLabel="popularView">
-                                                    <rect key="frame" x="0.0" y="0.0" width="320" height="280"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="320" height="270"/>
                                                     <subviews>
                                                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Kn6-jd-4wx">
-                                                            <rect key="frame" x="0.0" y="26" width="320" height="246"/>
+                                                            <rect key="frame" x="0.0" y="26" width="320" height="244.5"/>
                                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="5" minimumInteritemSpacing="5" id="0hg-lh-quN">
                                                                 <size key="itemSize" width="124" height="230"/>
@@ -191,7 +192,7 @@
                                                             </collectionViewFlowLayout>
                                                             <cells>
                                                                 <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="myCell" id="ufH-xX-RJo" customClass="MovieCollectionViewCell" customModule="PalCine" customModuleProvider="target">
-                                                                    <rect key="frame" x="7" y="8" width="124" height="230"/>
+                                                                    <rect key="frame" x="7" y="7.5" width="124" height="230"/>
                                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                                                         <rect key="frame" x="0.0" y="0.0" width="124" height="230"/>
@@ -274,18 +275,19 @@
                                                         <constraint firstItem="XyU-ee-AMF" firstAttribute="top" secondItem="cqH-5v-DKv" secondAttribute="top" constant="8" id="cj1-WY-0Kr"/>
                                                         <constraint firstItem="Kn6-jd-4wx" firstAttribute="leading" secondItem="cqH-5v-DKv" secondAttribute="leading" id="ev8-8R-ymK"/>
                                                         <constraint firstItem="Kn6-jd-4wx" firstAttribute="top" secondItem="XyU-ee-AMF" secondAttribute="bottom" id="fcZ-fZ-Noz"/>
-                                                        <constraint firstAttribute="bottom" secondItem="Kn6-jd-4wx" secondAttribute="bottom" constant="8" id="kRd-3l-dmN"/>
+                                                        <constraint firstAttribute="bottom" secondItem="Kn6-jd-4wx" secondAttribute="bottom" id="kRd-3l-dmN"/>
                                                         <constraint firstItem="Kn6-jd-4wx" firstAttribute="top" secondItem="XyU-ee-AMF" secondAttribute="bottom" id="mrw-fr-cpH"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="cqH-5v-DKv" firstAttribute="leading" secondItem="isZ-UM-yVN" secondAttribute="leading" id="J7B-id-JJY"/>
-                                                <constraint firstAttribute="bottom" secondItem="cqH-5v-DKv" secondAttribute="bottom" id="JG7-Xe-Hd5"/>
+                                                <constraint firstAttribute="bottom" secondItem="cqH-5v-DKv" secondAttribute="bottom" constant="9" id="JG7-Xe-Hd5"/>
                                                 <constraint firstAttribute="trailing" secondItem="cqH-5v-DKv" secondAttribute="trailing" id="dEB-Jt-rwe"/>
                                                 <constraint firstItem="cqH-5v-DKv" firstAttribute="top" secondItem="isZ-UM-yVN" secondAttribute="top" id="rWY-tU-HVP"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
                                             <outlet property="categoryTitleLabel" destination="XyU-ee-AMF" id="Krc-Hi-vgQ"/>
                                             <outlet property="moviesCollectionView" destination="Kn6-jd-4wx" id="tIf-Po-g93"/>
