--- a/PalCine/Base.lproj/Main.storyboard
+++ b/PalCine/Base.lproj/Main.storyboard
@@ -574,7 +574,7 @@
                                                             <rect key="frame" x="0.0" y="0.0" width="90" height="150"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <subviews>
-                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="placeholderCastImage" translatesAutoresizingMaskIntoConstraints="NO" id="gPo-lM-fY6">
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="placeholderCastImage" translatesAutoresizingMaskIntoConstraints="NO" id="gPo-lM-fY6">
                                                                     <rect key="frame" x="0.0" y="0.0" width="90" height="116"/>
                                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                 </imageView>
